<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#28388F"
  android:backgroundTint="#6D3F51B5"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/textView"
    android:layout_width="200dp"
    android:layout_height="0dp"
    android:layout_marginTop="32dp"
    android:autoText="true"
    android:background="#4B3F51B5"
    android:fontFamily="monospace"
    android:text=" MY TASKS"
    android:textAlignment="center"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/addBtn"
    android:layout_width="102dp"
    android:layout_height="44dp"
    android:layout_marginStart="148dp"
    android:layout_marginTop="28dp"
    android:background="#F33F51B5"
    android:text="Add Task"
    android:textSize="12sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/imageButton"
    app:layout_constraintHorizontal_bias="0.125"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/details1"
    app:layout_constraintVertical_bias="0.3" />

  <ImageView
    android:id="@+id/imageView3"
    android:layout_width="90dp"
    android:layout_height="82dp"
    android:layout_marginTop="88dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.536"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@android:drawable/checkbox_on_background" />

  <Button
    android:id="@+id/allTasks"
    android:layout_width="108dp"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="129dp"
    android:layout_marginBottom="88dp"
    android:text="All Tasks"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/details1"
    app:layout_constraintVertical_bias="0.0" />

  <Button
    android:id="@+id/details1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    android:text="Task  1"
    app:layout_constraintEnd_toStartOf="@+id/details3"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/details3" />

  <Button
    android:id="@+id/details2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    android:text="Task  2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/details3"
    app:layout_constraintTop_toTopOf="@+id/details3" />

  <Button
    android:id="@+id/details3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="Task  3 "
    app:layout_constraintEnd_toStartOf="@+id/details2"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/details1"
    app:layout_constraintTop_toBottomOf="@+id/recyclerView1" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView1"
    android:layout_width="347dp"
    android:layout_height="311dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.452" />

  <Button
    android:id="@+id/imageButton"
    android:layout_width="49dp"
    android:layout_height="49dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/ic_baseline_settings_applications_24"

    android:scaleX="1"
    android:scaleY="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/ic_baseline_settings_applications_24" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="215dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
