<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#28388F"
  android:backgroundTint="#6D3F51B5"
  tools:context=".TaskDetails">

  <TextView
    android:id="@+id/taskText"
    android:layout_width="292dp"
    android:layout_height="99dp"
    android:layout_marginTop="120dp"
    android:background="#813F51B5"
    android:fontFamily="monospace"
    android:text="Task Title"
    android:textAlignment="center"
    android:textSize="48sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView5"
    android:layout_width="383dp"
    android:layout_height="99dp"
    android:layout_marginTop="172dp"
    android:fontFamily="monospace"
    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/taskText" />
</androidx.constraintlayout.widget.ConstraintLayout>
